[package]
name = "signal_rs"
version = "0.1.0"
authors = ["MuhammadHassan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3"}
futures-core = {version="0.3"}
futures-util = "0.3"
tokio = {version = "1", features=["full"]}
anyhow = "1"
tokio-tungstenite = { version = "0.14.0", features=["tokio-native-tls"]}
serde = "1"
serde_derive = "1"
serde_json = "1"

[lib]
name = "server"
path = "src/lib.rs"
